Update comment for exploit_fixes in the ini

--- a/hen.ini
+++ b/hen.ini
@@ -1,7 +1,8 @@
-[HEN]
-; Enable exploit fixes - attempts to repatch bad/missing patches that should
-; have been made by the exploit. This helps ensure system stability after
-; the initial jailbreak process.
+ [HEN]
+; Enable exploit fixes - automatically reapplies any missing/failed/incorrect
+; patches that should have been set by the exploit. This helps maintain system
+; stability after jailbreaking by ensuring the kernel is consistently patched
+; across different exploits and firmware versions.
 ; Values: 0 = disabled, 1 = enabled
 ; Default: 0
 exploit_fixes = 0
